# rctes

./: Cargo.toml  docker-compose.yml
.sqlx/: query-70425b04c6d5c9af4f5e88ef96a00ac862893693d9929ee0b7bd352d1b4a6478.json  query-8b5e0b24a95ebe2a9f0c183490fac0df24c5afcc6b5c8fc643b8197ffcbb9300.json  query-b6e636ca073d9da8cf701fad60ff32fa55c813574b60750e878b0ada21858c16.json  query-d06732f7647b064887242dba5f0e3726630b674021e20d00986566cadafedf26.json
assets/: scripts.js
migrations/: 20231031143108_create_locations_table.sql
src/: db.rs  main.rs
templates/: counter.html  index.html  location.html
