[package]
name = "rcets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json"] }
askama_axum = "0.3.0"
axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "time"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.5.0", features = ["v4"] }
